# velvet_review

./: .gitlab-ci.yml  Docker.md  Dockerfile  alembic.ini  docker-compose-ci.yml  docker-compose.yml  env.md  pyproject.toml  pyrightconfig.json
dev_ops/: README.md  certbot-renew.sh  docker-compose-minio.yml  env.md  minio_init.sh  minio_policy.json  nginx.conf  telegram-notify.sh
src/: config.py  database.py  logging_config.py  main.py
src/adapters/: custom_redis.py  custom_redis.pyi  custom_s3_client.py  custom_s3_client.pyi  redis_adapter.py  s3_adapter.py
src/exceptions/: base.py  conflict.py  forbidden.py  not_found.py
src/migrations/: env.py  readmi.md
src/models/: actions.py  base.py  notifications.py  units.py  users.py
src/routers/: actions.py  admins.py  auths.py  base.py  cookies.py  dependencies.py  files.py  notifications.py  openapi_exemples.py  stores.py  units.py  users.py
src/schemas/: actions.py  admins.py  auths.py  base.py  files.py  mixin.py  notifications.py  query.py  stores.py  types.py  unit_images.py  units.py  users.py
src/services/: actions.py  admins.py  auths.py  base.py  files.py  images.py  notifications.py  stores.py  units.py  users.py
src/tasks/: celery_adapter.py  manager.py  tasks.py
src/templates/: __init__.py  confirmation_email.html  confirmation_reset_password.html  constants.py  factory.py  successful_registration.html
src/utils/: db_manager.py  exceptions.py  fastapi_startup.py  files.py  images.py  logger_utils.py  redis_utils.py  s3_manager.py  sql.py  swagger_exceptions.py  time_manager.py  (+1 more)
(+69 files in other folders)
